--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # elm-package generated files
-elm-stuff/
+/elm-stuff/*
+!/elm-stuff/exact-dependencies.json
 # elm-repl generated files
 repl-temp-*
+
+main.js
